# playdate-cpp

./: .gitignore  CMakeLists.txt  build.md  deploy.bat  readme.md
examples/: CMakeLists.txt
examples/application/: CMakeLists.txt
examples/application/Source/: pdxinfo
examples/application/src/: Application.cpp  Application.h  main.cpp
examples/application_lua/: main.cpp
examples/application_lua/Source/: main.lua
examples/audio/: CMakeLists.txt
examples/audio/Source/: pdxinfo
examples/audio/Source/audio/: Asteroids.mid
examples/audio/inc/: Application.h  Audio.h
examples/audio/src/: Application.cpp  Audio.cpp
examples/common/: CMakeLists.txt
examples/common/inc/: SimpleMath.h  SoundFx.h  SvgLoader.h  playdate_cpp_app.hcpp
examples/common/src/: ImageLoader.cpp  SoundFx.cpp  SvgLoader.cpp
examples/hello_world/: main.cpp
examples/physics/: CMakeLists.txt
examples/physics/Source/: pdxinfo
examples/physics/inc/: Physics.h
examples/physics/src/: Application.cpp  Physics.cpp
examples/sandbox/: CMakeLists.txt
examples/sandbox/Source/: pdxinfo
examples/sandbox/inc/: Sandbox.h
examples/sandbox/src/: Application.cpp  Application.h  Globals.h  Sandbox.cpp  ShaderToy.cpp  SimpleMath.h  SvgLoader.cpp  main.cpp
examples/shadertoy/: CMakeLists.txt
examples/shadertoy/Source/: pdxinfo
examples/shadertoy/inc/: Application.h
examples/shadertoy/src/: Application.cpp  Globals.cpp  ImageLoader.h  ShaderToy.cpp  Shadertoy.h  SimpleMath.h
